--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html lang="en">
 
 <head>
+
+<!-- Google Tag Manager -->
+<script>
+	(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-M7CNXDK');
+</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-983EZBYB1K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-983EZBYB1K');
+</script>
+<!-- End Google Tag Manager -->
+	
 	<title>UGS Publications</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -279,10 +300,6 @@
 	<link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css" />
 	<script src="https://js.arcgis.com/4.23/"></script>
 	<script>
-
-	
-
-
 $(document).ready(function(){
 
 
@@ -295,15 +312,26 @@ $(document).ready(function(){
 		var uri = new URL(url);
 		var c = uri.searchParams.get("pub");
 		return c;
-
 	}
-	var param = getURLParameter('pub', document.referrer);
-	if (param === null){
+
+	// if user runs this page from within an iframe, get the referrer url (live page)
+	// but if user runs this page alonge (testing), return the document url
+	if (document.referrer){
+		// in iframe
+		console.log("in iframe!");
+		var pub = getURLParameter('pub', document.referrer);
+	} else {
+		// not in iframe, page running solo
+		console.log("NOT in iframe!");
+		var pub = getURLParameter('pub', document.location);
+	}
+	
+	if (pub === null){
 		console.log('PUB NUMBER DOESNT EXSIST');
 		createErrorPage();
 	}
-	console.log(param);
-	getData(param);
+	console.log(pub);
+	getData(pub);
 
 	function createErrorPage(){
 		var notFound = '<div id="errordiv" style="display: block;">' +
@@ -695,6 +723,12 @@ function loadmap(seriesId){
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M7CNXDK"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 
 	<div class="container-fluid">
 		<h4>PUBLICATION DETAILS</h4>
@@ -784,6 +818,20 @@ function loadmap(seriesId){
 
 						<div id="meta-info"></div>
 
+						<!--     <hr><div class="mapHelp-title uppercase noselect" >Accuracy Disclaimer</div>
+							<p>
+								The Geologic Map Portal serves approximately 800 frequently used geologic maps (approximately 25% of all maps in UGS records).  These maps are generally considered the "best available" in three scale groups: 1:500,000 (the state geologic map published in 1980), 1:50,000-1:125,000 (intermediate scale or 30'x60' series), and 1:24,000 (7.5' quadrangle series). 
+								<br><br>
+								These geologic maps are based on field mapping from the 1950s to present by geologists from the Utah Geological Survey, U.S. Geological Survey, universities (professors and students from many North American and a few European universities), private companies, and even retirees.
+								<br><br>
+								The accuracy (depicted geology is correct) and precision (contacts, faults, and other features are in their spatially correct location) vary greatly between maps.  In general, newer maps are more detailed, accurate, and precise than older maps due to newer concepts and technology, but many exceptions exist.  Spatial precision ranges from a few feet (meters) to over 300 feet (100 m). 
+								<br><br>
+								The UGS creates GIS (digital Geographic Information System) reproductions of many older geologic maps.  We generally do not modify or improve the spatial accuracy of features on the map. Therefore, many older maps may have a "new" appearance but still have low precision.  The user should independently verify the accuracy and precision of all geologic maps before making important decisions.
+								<br><br>
+								The Utah Department of Natural Resources, Utah Geological Survey, makes no warranty, expressed or implied, regarding the suitability of this product for a particular use, and does not guarantee accuracy or completeness of the data. The Utah Department of Natural Resources, Utah Geological Survey, shall not be liable under any circumstances for any direct, indirect, special, incidental, or consequential damages with respect to claims by users of this product.
+							</p> 
+						-->
+
 
 					</div>
 
@@ -813,13 +861,6 @@ function loadmap(seriesId){
 	</div>
 
 
-	</div>
-	</div>
-	</div>
-
-	<!-- <footer class="container-fluid">
-
-	</footer>   -->
 
 </body>
 
